Prevent horizontal scroll in shoutbox

--- a/static/shoutbox.css
+++ b/static/shoutbox.css
@@ -14,6 +14,7 @@
     width: 100%;
     overflow-y: scroll;
     box-sizing: border-box;
+    word-wrap: break-word;
 }
 #input-box {
     overflow: auto;
